Updated portfolio with new changes

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:sainihardik1104@gmail.com">singhabhishekcoeruniversity@gmail.com</a></p>
+    <p>Email: <a href="mailto:sainihardik1104@gmail.com">singhabhishekcoer@gmail.com</a></p>
     <p>Phone: +91 95572 10581</p>
     <p>Location: Roorkee, India</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/dr-abhishek-singh-a78b4a356/" target="_blank">https://www.linkedin.com/in/dr-abhishek-singh-a78b4a356/</a></p>
